# grost

./: Cargo.toml  README.md  rustc-ice-2025-06-27T08_56_24-90147.txt  rustc-ice-2025-06-27T08_57_29-90976.txt  rustc-ice-2025-06-27T08_57_34-91053.txt  rustc-ice-2025-06-27T08_57_41-91155.txt  rustc-ice-2025-06-27T08_57_46-91251.txt  rustc-ice-2025-06-27T08_59_23-92566.txt  rustc-ice-2025-06-27T09_00_38-93527.txt  rustc-ice-2025-06-27T09_00_51-93707.txt  rustc-ice-2025-06-27T09_01_17-94072.txt  rustc-ice-2025-06-27T09_01_31-94253.txt  rustc-ice-2025-06-27T09_01_38-94375.txt  rustc-ice-2025-06-27T09_02_00-94691.txt  rustc-ice-2025-06-27T09_02_29-95085.txt  rustc-ice-2025-06-27T09_02_47-95386.txt  rustc-ice-2025-06-27T09_02_59-95556.txt  rustc-ice-2025-06-27T09_03_57-96283.txt  rustc-ice-2025-06-27T09_04_04-96407.txt  rustc-ice-2025-06-27T09_04_09-96480.txt  rustc-ice-2025-06-27T09_04_37-96885.txt  rustc-ice-2025-06-27T09_05_56-97864.txt  rustc-ice-2025-06-27T09_06_27-98268.txt  rustc-ice-2025-06-27T09_09_06-406.txt  rustc-ice-2025-06-27T09_09_25-785.txt  rustc-ice-2025-06-27T09_09_48-1157.txt  rustc-ice-2025-06-27T09_11_57-2821.txt  rustc-ice-2025-06-27T09_17_17-7084.txt  rustc-ice-2025-06-27T09_17_24-7187.txt  rustc-ice-2025-06-27T09_17_42-7482.txt  rustc-ice-2025-06-27T09_17_49-7581.txt  rustc-ice-2025-06-27T09_17_58-7733.txt  rustc-ice-2025-06-27T09_21_00-10192.txt  rustc-ice-2025-06-27T09_24_42-13121.txt  rustc-ice-2025-06-27T09_24_58-13336.txt  rustc-ice-2025-06-27T09_29_22-16938.txt  rustc-ice-2025-06-27T09_29_47-17400.txt  rustc-ice-2025-06-27T09_29_55-17499.txt  rustc-ice-2025-06-27T09_30_09-17715.txt  rustc-ice-2025-06-27T09_31_14-18554.txt  (+127 more)
grost/: Cargo.toml
grost-codegen/: Cargo.toml  bk.rs  x.rs
grost-codegen-test/: Cargo.toml  build.rs
grost-codegen-test/src/: color_enum.rs  lib.rs  user_struct.rs
grost-codegen-test/tests/: t.rs
grost-codegen/src/: case.rs  derive.rs  enum_.rs  flavor.rs  flavors.rs  lib.rs  network.rs  object.rs  parser.rs  safe_ident.rs  struct_.rs  tests.rs  ty.rs  unit_enum.rs
grost-codegen/src/derive/: network.rs
grost-codegen/src/derive/network/: codec.rs  object.rs  reflection.rs
grost-codegen/src/enum_/: reflection.rs
grost-codegen/src/flavors/: network.rs
grost-codegen/src/flavors/network/: codec.rs  object.rs  reflection.rs  struct_index.rs
grost-codegen/src/object/: field.rs  index.rs  parser.rs  partial_decoded_object.rs  partial_object.rs  partial_ref_object.rs  reflection.rs  selector.rs
grost-codegen/src/object/field/: setter.rs
grost-codegen/src/object/parser/: field.rs
grost-codegen/src/parser/: object.rs
grost-codegen/src/parser/object/: field.rs  indexer.rs  selector.rs
grost-codegen/src/struct_/: field.rs  index.rs  reflection.rs  selection.rs
grost-codegen/src/struct_/field/: getter.rs  setter.rs
grost-codegen/src/ty/: int.rs  uint.rs
grost-darling/: Cargo.toml
grost-darling/derive/: Cargo.toml
grost-darling/derive/src/: lib.rs  object.rs
grost-darling/src/: interface.rs  lib.rs  meta.rs  mir.rs  object.rs
grost-darling/src/meta/: object.rs
grost-darling/src/meta/object/: field.rs
grost-darling/src/mir/: object.rs
grost-darling/src/mir/object/: field_reflection.rs  indexer.rs  partial.rs  partial_ref.rs  reflection.rs  selector.rs
grost-darling/src/object/: field.rs
grost-darling/src/object/field/: select.rs  type_spec.rs
grost-derive/: Cargo.toml  concrete_defination.rs  x.rs
grost-derive-test/: Cargo.toml
grost-derive-test/src/: lib.rs  object.rs  optional_scalar.rs
grost-derive-test/src/object/: bytes.rs  generic.rs  generic_generated.rs  generic_generated1.rs  list.rs  list_generated.rs  nullable_bytes.rs  nullable_list.rs  nullable_scalar.rs  nullable_string.rs  optional_bytes.rs  optional_bytes_generated.rs  optional_list.rs  optional_list_generated.rs  optional_scalar.rs  optional_string.rs  scalar.rs  string.rs  user.rs
grost-derive/src/: lib.rs
grost-derive/src/docs/: object.md
grost-derive/tests/: concrete_defination.rs  concrete_object.rs  generic_defination.rs  generic_object.rs  object.rs  optional_scalar.rs  optional_scalar_generated.rs  user.rs
grost-mir/: Cargo.toml
grost-mir/src/: ast.rs  flavor.rs  generic.rs  lib.rs  meta.rs  mir.rs  object.rs  utils.rs
grost-mir/src/ast/: flavor.rs  generic.rs  object.rs  ty.rs
grost-mir/src/ast/flavor/: decode.rs  encode.rs  identifier.rs  registration.rs  serde.rs
grost-mir/src/ast/object/: field.rs  (+4 more)
grost-mir/src/flavor/: decode.rs  encode.rs  identifier.rs  meta.rs  tag.rs
grost-mir/src/meta/: flavor.rs  generic.rs  object.rs
grost-mir/src/mir/: obj.rs  object.rs  object1.rs
grost-mir/src/object/: ast.rs  meta.rs  mir.rs
grost-mir/src/utils/: or_default.rs
grost-parser/: Cargo.toml  grost.pest  parser.rs
grost-parser/src/: lib.rs  parser.rs
grost-proto/: Cargo.toml
grost-proto/src/: buffer.rs  convert.rs  decode.rs  encode.rs  error.rs  flavors.rs  identifier.rs  indexer.rs  lib.rs  list.rs  macros.rs  map.rs  marker.rs  object.rs  reflection.rs  select_set.rs  selection.rs  selector.rs  set.rs  state.rs  unknown.rs  utils.rs
grost-proto/src/buffer/: error.rs  read_buf.rs  stack_buffer.rs  write_buf.rs
grost-proto/src/convert/: flatten.rs  partial_transform.rs  transform.rs
grost-proto/src/decode/: error.rs  slice.rs  str.rs
grost-proto/src/encode/: error.rs
grost-proto/src/flavors/: groto.rs  network.rs  selector.rs  wire_format.rs
grost-proto/src/reflection/: decoded.rs  encode.rs  enum_.rs  identifier.rs  schema.rs  struct_.rs  tag.rs  unit_enum.rs  wire_format.rs  wire_type.rs
grost-types/: Cargo.toml
grost-types/src/: error.rs  identifier.rs  lib.rs  tag.rs  wire_type.rs
grost/src/: buffer.rs  context.rs  decode.rs  encode.rs  error.rs  flavors.rs  impls.rs  lib.rs  macros.rs  selection_set.rs  tag.rs  unknown.rs  utils.rs  wire_type.rs
grost/src/flavors/: network.rs
grost/src/impls/: builtin.rs  bytes.rs  map.rs  net.rs  primitives.rs  repeated.rs  ruint.rs  set.rs  string.rs  time.rs  vector.rs
grost/src/utils/: fixed.rs  network.rs  varint.rs  zst.rs
(+575 files in other folders)
