[workspace]
members = [
  "grost",
  "grost-codegen",
  "grost-codegen-test",
]
resolver = "3"
exclude = ["guides"]

[workspace.package]
edition = "2024"
license = "MPL-2.0"
repository = "https://github.com/al8n/graphrpc"
homepage = "https://github.com/al8n/graphrpc"
readme = "README.md"
rust-version = "1.85.0"
categories = ["network-programming", "asynchronous"]

[workspace.package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[workspace.dependencies]
varing = { version = "0.5", default-features = false }

graphrpc-types = { path = "graphrpc-types", version = "0.1", default-features = false }
