[workspace]
members = [
  "grost",
  "grost-codegen",
  "grost-darling",
  "grost-derive",
  "grost-derive-test",
  "grost-mir",
  "grost-parser",
  "grost-proto",
]
resolver = "3"
exclude = ["guides"]

[workspace.package]
edition = "2024"
license = "MPL-2.0"
repository = "https://github.com/al8n/graphrpc"
homepage = "https://github.com/al8n/graphrpc"
readme = "README.md"
rust-version = "1.85.0"
categories = ["network-programming", "asynchronous"]

[workspace.package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[workspace.dependencies]
derive_more = { version = "2", default-features = false }
darling = { version = "0.21", features = ["suggestions", "diagnostics"] }
either = { version = "1", default-features = false }
heck = { version = "0.5", default-features = false }
paste = "1"
proc-macro2 = { version = "1", default-features = false }
prettyplease = { version = "0.2", default-features = false }
quote = { version = "1", default-features = false }
syn = "2"
smol_str = { version = "0.3", default-features = false }
thiserror = { version = "2", default-features = false }
varing = { version = "0.5", default-features = false }

grost-codegen = { version = "0.1", path = "./grost-codegen", default-features = false }
grost-derive = { version = "0.1", path = "./grost-derive", default-features = false }
grost-parser = { version = "0.1", path = "./grost-parser", default-features = false }
grost-proto = { version = "0.1", path = "./grost-proto", default-features = false }
grost-mir = { version = "0.1", path = "./grost-mir", default-features = false }
grost-darling = { version = "0.1", path = "./grost-darling", default-features = false }
