[package]
name = "grost-darling"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
rust-version.workspace = true
categories.workspace = true
metadata.workspace = true
description = "A crate for who want to developing proc-macro based on Grost"

[dependencies]
grost-darling-derive.workspace = true
derive_more = { workspace = true, features = ["try_unwrap", "unwrap", "is_variant"] }

heck.workspace = true
syn = { workspace = true, features = ["full"] }
proc-macro2.workspace = true
quote.workspace = true
darling.workspace = true
