[package]
name = "grost-codegen-test"
version = "0.1.0"
edition.workspace = true
publish = false

[features]
quickcheck = ["grost/quickcheck"]

arbitrary-int_1 = ["grost/arbitrary-int_1", "dep:arbitrary-int_1"]
bnum_0_13 = ["grost/bnum_0_13", "dep:bnum_0_13"]
chrono_0_4 = ["grost/chrono_0_4", "dep:chrono_0_4"]
chrono-tz_0_10 = ["grost/chrono-tz_0_10", "dep:chrono-tz_0_10"]
half_2 = ["grost/half_2", "dep:half_2"]
ruint_1 = ["grost/ruint_1", "dep:ruint_1"]
decimal_1 = ["grost/decimal_1", "dep:rust_decimal_1"]
time_0_3 = ["grost/time_0_3", "dep:time_0_3"]

[dependencies]
grost = { path = "../grost", version = "0.1", default-features = false, features = ["quickcheck", "std", "derive"] }

arbitrary-int_1 = { package = "arbitrary-int", version = "1", default-features = false, optional = true }
bnum_0_13 = { package = "bnum", version = "0.13", default-features = false, optional = true }
chrono_0_4 = { package = "chrono", version = "0.4", default-features = false, optional = true }
chrono-tz_0_10 = { package = "chrono-tz", version = "0.10", default-features = false, optional = true }
half_2 = { package = "half", version = "2", default-features = false, optional = true }
ruint_1 = { package = "ruint", version = "1", default-features = false, optional = true }
rust_decimal_1 = { package = "rust_decimal", version = "1", default-features = false, optional = true }
time_0_3 = { package = "time", version = "0.3", default-features = false, optional = true }
