[package]
name = "grost-derive"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
rust-version.workspace = true
categories.workspace = true
metadata.workspace = true

[lib]
proc-macro = true

[dependencies]
darling = { workspace = true, features = ["suggestions"] }
grost-codegen = { path = "../grost-codegen" }
proc-macro2 = { workspace = true, features = ["default"] }
quote = { workspace = true, features = ["default"] }
syn = { workspace = true, features = ["full"] }
prettyplease.workspace = true

[dev-dependencies]
grost = { path = "../grost" }