[package]
name = "grost-mir"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
rust-version.workspace = true
categories.workspace = true
metadata.workspace = true
description = "The Mid-level Intermediate Representation (MIR) for Grost schema types."

[dependencies]
grost-darling.workspace = true
derive_more = { workspace = true, features = ["try_unwrap", "unwrap", "is_variant"] }

itertools = { version = "0.14" }
heck.workspace = true
syn = { workspace = true, features = ["full"] }
proc-macro2.workspace = true
quote.workspace = true
darling.workspace = true
