[package]
name = "grost-parser"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
rust-version.workspace = true
categories.workspace = true
metadata.workspace = true

[dependencies]
pest = "2.8"
pest_derive = "2.8"
