[package]
name = "grost-types"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
rust-version.workspace = true
categories.workspace = true
metadata.workspace = true

[features]
default = []
alloc = []
std = ["thiserror/std"]

[dependencies]
derive_more = { workspace = true, features = ["display", "is_variant"] }
varing.workspace = true
thiserror.workspace = true